Add Ques_2.ipynb: data imputation with mean, median, mode

--- a/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,43 +26,45 @@
       "4  30.0  62000.0         IT\n",
       "\n",
       "DataFrame after Imputation:\n",
-      "      Age   Salary Department\n",
-      "0  25.00  50000.0         HR\n",
-      "1  27.00  54000.0    Finance\n",
-      "2  27.75  58000.0         HR\n",
-      "3  29.00  56000.0         HR\n",
-      "4  30.00  62000.0         IT\n"
+      "     Age   Salary Department\n",
+      "0  25.0  50000.0         HR\n",
+      "1  27.0  54000.0    Finance\n",
+      "2  28.0  58000.0         HR\n",
+      "3  29.0  56000.0         HR\n",
+      "4  30.0  62000.0         IT\n"
      ]
     }
    ],
    "source": [
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "# Sample data with missing values\n",
+    "# Sample dataset with missing values\n",
     "data = {\n",
     "    'Age': [25, 27, np.nan, 29, 30],\n",
     "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
     "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
     "}\n",
     "\n",
+    "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "print(\"Original DataFrame:\\n\", df)\n",
     "\n",
-    "# --- Mean Imputation ---\n",
+    "# --- Step 1: Mean Imputation for 'Salary' ---\n",
     "mean_imputer = SimpleImputer(strategy='mean')\n",
-    "df['Age'] = mean_imputer.fit_transform(df[['Age']])\n",
     "df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
     "\n",
-    "# --- Median Imputation (optional, overrides Age mean imputation) ---\n",
+    "# --- Step 2: Median Imputation for 'Age' ---\n",
     "median_imputer = SimpleImputer(strategy='median')\n",
     "df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
     "\n",
-    "# --- Mode Imputation ---\n",
+    "# --- Step 3: Mode Imputation for 'Department' ---\n",
     "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
     "df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
     "\n",
+    "# Final output\n",
     "print(\"\\nDataFrame after Imputation:\\n\", df)\n"
    ]
   }
