Add Ques_2.ipynb: data imputation with mean, median, mode

--- a/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Age   Salary Department\n",
+      "DataFrame after imputation:\n",
+      "     Age   Salary Department\n",
       "0  25.0  50000.0         HR\n",
       "1  27.0  54000.0    Finance\n",
       "2  28.0  58000.0         HR\n",
@@ -27,12 +28,45 @@
     }
    ],
    "source": [
-    "# Import necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "# Step 1: Create sample data with missing values\n",
+    "def impute_missing_values(df, columns=None):\n",
+    "    \"\"\"\n",
+    "    Function to impute missing values in a DataFrame using mean, median, or mode.\n",
+    "    Arguments:\n",
+    "    - df: DataFrame with missing values\n",
+    "    - columns: Dictionary with column names and corresponding imputation strategies\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Check if the dataframe contains expected columns\n",
+    "    if columns:\n",
+    "        missing_cols = [col for col in columns.keys() if col not in df.columns]\n",
+    "        if missing_cols:\n",
+    "            raise ValueError(f\"Missing expected columns: {', '.join(missing_cols)}\")\n",
+    "    \n",
+    "    # Validate 'Age' and 'Salary' columns to be numeric\n",
+    "    if not pd.api.types.is_numeric_dtype(df['Age']):\n",
+    "        raise ValueError(\"'Age' column should contain numeric data.\")\n",
+    "    if not pd.api.types.is_numeric_dtype(df['Salary']):\n",
+    "        raise ValueError(\"'Salary' column should contain numeric data.\")\n",
+    "    \n",
+    "    # Impute 'Age' with median\n",
+    "    median_imputer = SimpleImputer(strategy='median')\n",
+    "    df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
+    "\n",
+    "    # Impute 'Salary' with mean\n",
+    "    mean_imputer = SimpleImputer(strategy='mean')\n",
+    "    df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
+    "\n",
+    "    # Impute 'Department' with mode (most frequent)\n",
+    "    mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "    df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Sample dataset with missing values\n",
     "data = {\n",
     "    'Age': [25, 27, np.nan, 29, 30],\n",
     "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
@@ -41,27 +75,12 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Step 2: Impute missing values using custom function\n",
-    "def impute_missing_values(df):\n",
-    "    # Impute 'Salary' with mean\n",
-    "    mean_imputer = SimpleImputer(strategy='mean')\n",
-    "    df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
-    "\n",
-    "    # Impute 'Age' with median\n",
-    "    median_imputer = SimpleImputer(strategy='median')\n",
-    "    df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
-    "\n",
-    "    # Impute 'Department' with mode\n",
-    "    mode_imputer = SimpleImputer(strategy='most_frequent')\n",
-    "    df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
-    "    \n",
-    "    return df\n",
-    "\n",
-    "# Step 3: Call the function\n",
-    "df = impute_missing_values(df)\n",
-    "\n",
-    "# Step 4: Show the final DataFrame\n",
-    "print(df)\n"
+    "# Example of function call with validation\n",
+    "try:\n",
+    "    df = impute_missing_values(df)\n",
+    "    print(\"DataFrame after imputation:\\n\", df)\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
