Add Ques_2.ipynb: data imputation with mean, median, mode

--- a/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_2.ipynb
@@ -10,15 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrame after imputation:\n",
-      "     Age   Salary Department\n",
+      "    Age   Salary Department\n",
       "0  25.0  50000.0         HR\n",
       "1  27.0  54000.0    Finance\n",
       "2  28.0  58000.0         HR\n",
@@ -32,35 +31,27 @@
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "def impute_missing_values(df, columns=None):\n",
-    "    \"\"\"\n",
-    "    Function to impute missing values in a DataFrame using mean, median, or mode.\n",
-    "    Arguments:\n",
-    "    - df: DataFrame with missing values\n",
-    "    - columns: Dictionary with column names and corresponding imputation strategies\n",
-    "    \"\"\"\n",
+    "# Function to impute missing values in specific columns\n",
+    "def impute_missing_values(df):\n",
+    "    # Check if required columns exist in the dataframe\n",
+    "    if 'Age' not in df.columns or 'Salary' not in df.columns or 'Department' not in df.columns:\n",
+    "        raise ValueError(\"DataFrame must contain 'Age', 'Salary', and 'Department' columns.\")\n",
     "    \n",
-    "    # Check if the dataframe contains expected columns\n",
-    "    if columns:\n",
-    "        missing_cols = [col for col in columns.keys() if col not in df.columns]\n",
-    "        if missing_cols:\n",
-    "            raise ValueError(f\"Missing expected columns: {', '.join(missing_cols)}\")\n",
-    "    \n",
-    "    # Validate 'Age' and 'Salary' columns to be numeric\n",
+    "    # Check if 'Age' and 'Salary' columns contain numeric data\n",
     "    if not pd.api.types.is_numeric_dtype(df['Age']):\n",
     "        raise ValueError(\"'Age' column should contain numeric data.\")\n",
     "    if not pd.api.types.is_numeric_dtype(df['Salary']):\n",
     "        raise ValueError(\"'Salary' column should contain numeric data.\")\n",
     "    \n",
-    "    # Impute 'Age' with median\n",
+    "    # Impute missing values in 'Age' using the median strategy\n",
     "    median_imputer = SimpleImputer(strategy='median')\n",
     "    df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
-    "\n",
-    "    # Impute 'Salary' with mean\n",
+    "    \n",
+    "    # Impute missing values in 'Salary' using the mean strategy\n",
     "    mean_imputer = SimpleImputer(strategy='mean')\n",
     "    df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
     "\n",
-    "    # Impute 'Department' with mode (most frequent)\n",
+    "    # Impute missing values in 'Department' using the mode (most frequent) strategy\n",
     "    mode_imputer = SimpleImputer(strategy='most_frequent')\n",
     "    df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
     "\n",
@@ -73,14 +64,14 @@
     "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
     "}\n",
     "\n",
+    "# Create the DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# Example of function call with validation\n",
-    "try:\n",
-    "    df = impute_missing_values(df)\n",
-    "    print(\"DataFrame after imputation:\\n\", df)\n",
-    "except ValueError as e:\n",
-    "    print(f\"Error: {e}\")\n"
+    "# Call the function to impute missing values\n",
+    "df = impute_missing_values(df)\n",
+    "\n",
+    "# Print the result\n",
+    "print(df)\n"
    ]
   }
  ],
