Added Ques_2.ipynb for Data Quality Challenges in Data Engineering Pipelines

--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
@@ -22,7 +22,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, FloatType\n",
+    "\n",
+    "# Step 1: Create Spark Session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Handle Schema Mismatches\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "# Step 2: Load DataFrame\n",
+    "# Assume you have a CSV file 'data.csv' with potential schema mismatches\n",
+    "# For this example, we're using a sample DataFrame instead\n",
+    "data = [\n",
+    "    ('John', 28, 'HR'),\n",
+    "    ('Alice', '29', 'Finance'),\n",
+    "    ('Bob', 31, None),\n",
+    "    ('Eve', None, 'IT')\n",
+    "]\n",
+    "\n",
+    "# Column names may not match the expected schema, so we define them\n",
+    "columns = ['name', 'age', 'department']\n",
+    "df = spark.createDataFrame(data, columns)\n",
+    "\n",
+    "# Show the original DataFrame with potential mismatched schema\n",
+    "df.show()\n",
+    "\n",
+    "# Step 3: Define the expected schema\n",
+    "expected_schema = StructType([\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"age\", IntegerType(), True),\n",
+    "    StructField(\"department\", StringType(), True)\n",
+    "])\n",
+    "\n",
+    "# Step 4: Handle Schema Mismatches\n",
+    "# 4.1: Cast the 'age' column to Integer (if it's not already) and handle any missing values\n",
+    "df = df.withColumn(\"age\", df[\"age\"].cast(IntegerType()))\n",
+    "\n",
+    "# 4.2: Handle missing department values by filling them with a default value (e.g., \"Unknown\")\n",
+    "df = df.fillna({\"department\": \"Unknown\"})\n",
+    "\n",
+    "# 4.3: Renaming any columns that don't match the expected names (if necessary)\n",
+    "# Example: Renaming 'name' column to 'full_name' (if needed)\n",
+    "df = df.withColumnRenamed(\"name\", \"full_name\")\n",
+    "\n",
+    "# Step 5: Show Corrected Data\n",
+    "df.show()\n",
+    "\n",
+    "# Stop the Spark session\n",
+    "spark.stop()\n"
    ]
   },
   {
