--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
@@ -18,59 +18,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "     Age   Salary Department\n",
+      "0  25.0  50000.0         HR\n",
+      "1  27.0  54000.0    Finance\n",
+      "2   NaN  58000.0         HR\n",
+      "3  29.0      NaN        NaN\n",
+      "4  30.0  62000.0         IT\n",
+      "\n",
+      "DataFrame after Imputation:\n",
+      "      Age   Salary Department\n",
+      "0  25.00  50000.0         HR\n",
+      "1  27.00  54000.0    Finance\n",
+      "2  27.75  58000.0         HR\n",
+      "3  29.00  56000.0         HR\n",
+      "4  30.00  62000.0         IT\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, FloatType\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "# Step 1: Create Spark Session\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"Handle Schema Mismatches\") \\\n",
-    "    .getOrCreate()\n",
+    "# Sample data with missing values\n",
+    "data = {\n",
+    "    'Age': [25, 27, np.nan, 29, 30],\n",
+    "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
+    "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
+    "}\n",
     "\n",
-    "# Step 2: Load DataFrame\n",
-    "# Assume you have a CSV file 'data.csv' with potential schema mismatches\n",
-    "# For this example, we're using a sample DataFrame instead\n",
-    "data = [\n",
-    "    ('John', 28, 'HR'),\n",
-    "    ('Alice', '29', 'Finance'),\n",
-    "    ('Bob', 31, None),\n",
-    "    ('Eve', None, 'IT')\n",
-    "]\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
     "\n",
-    "# Column names may not match the expected schema, so we define them\n",
-    "columns = ['name', 'age', 'department']\n",
-    "df = spark.createDataFrame(data, columns)\n",
+    "# Show original DataFrame\n",
+    "print(\"Original DataFrame:\\n\", df)\n",
     "\n",
-    "# Show the original DataFrame with potential mismatched schema\n",
-    "df.show()\n",
+    "# --- Mean Imputation (only for numerical columns) ---\n",
+    "mean_imputer = SimpleImputer(strategy='mean')\n",
+    "df['Age'] = mean_imputer.fit_transform(df[['Age']])\n",
+    "df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
     "\n",
-    "# Step 3: Define the expected schema\n",
-    "expected_schema = StructType([\n",
-    "    StructField(\"name\", StringType(), True),\n",
-    "    StructField(\"age\", IntegerType(), True),\n",
-    "    StructField(\"department\", StringType(), True)\n",
-    "])\n",
+    "# --- Median Imputation ---\n",
+    "median_imputer = SimpleImputer(strategy='median')\n",
+    "df['Age'] = median_imputer.fit_transform(df[['Age']])  # Replacing mean with median if preferred\n",
     "\n",
-    "# Step 4: Handle Schema Mismatches\n",
-    "# 4.1: Cast the 'age' column to Integer (if it's not already) and handle any missing values\n",
-    "df = df.withColumn(\"age\", df[\"age\"].cast(IntegerType()))\n",
+    "# --- Mode Imputation (categorical or numerical) ---\n",
+    "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
     "\n",
-    "# 4.2: Handle missing department values by filling them with a default value (e.g., \"Unknown\")\n",
-    "df = df.fillna({\"department\": \"Unknown\"})\n",
-    "\n",
-    "# 4.3: Renaming any columns that don't match the expected names (if necessary)\n",
-    "# Example: Renaming 'name' column to 'full_name' (if needed)\n",
-    "df = df.withColumnRenamed(\"name\", \"full_name\")\n",
-    "\n",
-    "# Step 5: Show Corrected Data\n",
-    "df.show()\n",
-    "\n",
-    "# Stop the Spark session\n",
-    "spark.stop()\n"
+    "# Show the DataFrame after imputation\n",
+    "print(\"\\nDataFrame after Imputation:\\n\", df)\n"
    ]
   },
   {
@@ -89,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +104,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
