Added Ques_2.ipynb for Data Quality Challenges in Data Engineering Pipelines

--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "Original DataFrame:\n",
-      "     Age   Salary Department\n",
+      "    Age   Salary Department\n",
       "0  25.0  50000.0         HR\n",
       "1  27.0  54000.0    Finance\n",
       "2   NaN  58000.0         HR\n",
@@ -34,12 +34,12 @@
       "4  30.0  62000.0         IT\n",
       "\n",
       "DataFrame after Imputation:\n",
-      "      Age   Salary Department\n",
-      "0  25.00  50000.0         HR\n",
-      "1  27.00  54000.0    Finance\n",
-      "2  27.75  58000.0         HR\n",
-      "3  29.00  56000.0         HR\n",
-      "4  30.00  62000.0         IT\n"
+      "    Age   Salary Department\n",
+      "0  25.0  50000.0         HR\n",
+      "1  27.0  54000.0    Finance\n",
+      "2  28.0  58000.0         HR\n",
+      "3  29.0  56000.0         HR\n",
+      "4  30.0  62000.0         IT\n"
      ]
     }
    ],
@@ -48,7 +48,35 @@
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "# Sample data with missing values\n",
+    "# Function to impute missing values\n",
+    "def impute_missing_values(df):\n",
+    "    # Check if required columns exist in the dataframe\n",
+    "    required_columns = ['Age', 'Salary', 'Department']\n",
+    "    for col in required_columns:\n",
+    "        if col not in df.columns:\n",
+    "            raise ValueError(f\"DataFrame must contain the column '{col}'.\")\n",
+    "\n",
+    "    # Check if 'Age' and 'Salary' columns contain numeric data\n",
+    "    if not pd.api.types.is_numeric_dtype(df['Age']):\n",
+    "        raise ValueError(\"'Age' column should contain numeric data.\")\n",
+    "    if not pd.api.types.is_numeric_dtype(df['Salary']):\n",
+    "        raise ValueError(\"'Salary' column should contain numeric data.\")\n",
+    "    \n",
+    "    # Impute missing values in 'Age' using the median strategy\n",
+    "    median_imputer = SimpleImputer(strategy='median')\n",
+    "    df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
+    "    \n",
+    "    # Impute missing values in 'Salary' using the mean strategy\n",
+    "    mean_imputer = SimpleImputer(strategy='mean')\n",
+    "    df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
+    "\n",
+    "    # Impute missing values in 'Department' using the mode (most frequent) strategy\n",
+    "    mode_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "    df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Sample dataset with missing values\n",
     "data = {\n",
     "    'Age': [25, 27, np.nan, 29, 30],\n",
     "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
@@ -59,23 +87,15 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Show original DataFrame\n",
-    "print(\"Original DataFrame:\\n\", df)\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
     "\n",
-    "# --- Mean Imputation (only for numerical columns) ---\n",
-    "mean_imputer = SimpleImputer(strategy='mean')\n",
-    "df['Age'] = mean_imputer.fit_transform(df[['Age']])\n",
-    "df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
-    "\n",
-    "# --- Median Imputation ---\n",
-    "median_imputer = SimpleImputer(strategy='median')\n",
-    "df['Age'] = median_imputer.fit_transform(df[['Age']])  # Replacing mean with median if preferred\n",
-    "\n",
-    "# --- Mode Imputation (categorical or numerical) ---\n",
-    "mode_imputer = SimpleImputer(strategy='most_frequent')\n",
-    "df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
+    "# Call the function to impute missing values\n",
+    "df = impute_missing_values(df)\n",
     "\n",
     "# Show the DataFrame after imputation\n",
-    "print(\"\\nDataFrame after Imputation:\\n\", df)\n"
+    "print(\"\\nDataFrame after Imputation:\")\n",
+    "print(df)\n"
    ]
   },
   {
@@ -94,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
