Added schema mismatch handling using Spark and missing value imputation using Pandas for Ques_2.ipynb

--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
@@ -18,84 +18,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original DataFrame:\n",
-      "    Age   Salary Department\n",
-      "0  25.0  50000.0         HR\n",
-      "1  27.0  54000.0    Finance\n",
-      "2   NaN  58000.0         HR\n",
-      "3  29.0      NaN        NaN\n",
-      "4  30.0  62000.0         IT\n",
-      "\n",
-      "DataFrame after Imputation:\n",
-      "    Age   Salary Department\n",
-      "0  25.0  50000.0         HR\n",
-      "1  27.0  54000.0    Finance\n",
-      "2  28.0  58000.0         HR\n",
-      "3  29.0  56000.0         HR\n",
-      "4  30.0  62000.0         IT\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SparkSession\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StructType, StructField, IntegerType, DoubleType, StringType\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Step 1: Create Spark session\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyspark'"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, DoubleType, StringType\n",
     "\n",
-    "# Function to impute missing values\n",
-    "def impute_missing_values(df):\n",
-    "    # Check if required columns exist in the dataframe\n",
-    "    required_columns = ['Age', 'Salary', 'Department']\n",
-    "    for col in required_columns:\n",
-    "        if col not in df.columns:\n",
-    "            raise ValueError(f\"DataFrame must contain the column '{col}'.\")\n",
+    "# Step 1: Create Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Schema Mismatches Handling\") \\\n",
+    "    .getOrCreate()\n",
     "\n",
-    "    # Check if 'Age' and 'Salary' columns contain numeric data\n",
-    "    if not pd.api.types.is_numeric_dtype(df['Age']):\n",
-    "        raise ValueError(\"'Age' column should contain numeric data.\")\n",
-    "    if not pd.api.types.is_numeric_dtype(df['Salary']):\n",
-    "        raise ValueError(\"'Salary' column should contain numeric data.\")\n",
-    "    \n",
-    "    # Impute missing values in 'Age' using the median strategy\n",
-    "    median_imputer = SimpleImputer(strategy='median')\n",
-    "    df['Age'] = median_imputer.fit_transform(df[['Age']])\n",
-    "    \n",
-    "    # Impute missing values in 'Salary' using the mean strategy\n",
-    "    mean_imputer = SimpleImputer(strategy='mean')\n",
-    "    df['Salary'] = mean_imputer.fit_transform(df[['Salary']])\n",
+    "# Step 2: Load DataFrame (Assuming CSV input for this example)\n",
+    "data = [\n",
+    "    (25, 50000, 'HR'),\n",
+    "    (27, 54000, 'Finance'),\n",
+    "    (None, 58000, 'HR'),\n",
+    "    (29, None, 'Finance'),\n",
+    "    (30, 62000, 'IT'),\n",
+    "    (None, None, None)\n",
+    "]\n",
     "\n",
-    "    # Impute missing values in 'Department' using the mode (most frequent) strategy\n",
-    "    mode_imputer = SimpleImputer(strategy='most_frequent')\n",
-    "    df['Department'] = mode_imputer.fit_transform(df[['Department']]).ravel()\n",
+    "# Define the schema explicitly\n",
+    "schema = StructType([\n",
+    "    StructField(\"Age\", IntegerType(), True),\n",
+    "    StructField(\"Salary\", DoubleType(), True),\n",
+    "    StructField(\"Department\", StringType(), True)\n",
+    "])\n",
     "\n",
-    "    return df\n",
+    "# Create DataFrame using the schema\n",
+    "df = spark.createDataFrame(data, schema)\n",
     "\n",
-    "# Sample dataset with missing values\n",
-    "data = {\n",
-    "    'Age': [25, 27, np.nan, 29, 30],\n",
-    "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
-    "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
-    "}\n",
+    "# Step 3: Define the expected schema (no mismatches in this case)\n",
+    "expected_schema = StructType([\n",
+    "    StructField(\"Age\", IntegerType(), True),\n",
+    "    StructField(\"Salary\", DoubleType(), True),\n",
+    "    StructField(\"Department\", StringType(), True)\n",
+    "])\n",
     "\n",
-    "# Create a DataFrame\n",
-    "df = pd.DataFrame(data)\n",
+    "# Step 4: Handle schema mismatches by casting columns to the expected data types\n",
+    "df_corrected = df.select(\n",
+    "    col(\"Age\").cast(IntegerType()).alias(\"Age\"),\n",
+    "    col(\"Salary\").cast(DoubleType()).alias(\"Salary\"),\n",
+    "    col(\"Department\").cast(StringType()).alias(\"Department\")\n",
+    ")\n",
     "\n",
-    "# Show original DataFrame\n",
-    "print(\"Original DataFrame:\")\n",
-    "print(df)\n",
-    "\n",
-    "# Call the function to impute missing values\n",
-    "df = impute_missing_values(df)\n",
-    "\n",
-    "# Show the DataFrame after imputation\n",
-    "print(\"\\nDataFrame after Imputation:\")\n",
-    "print(df)\n"
+    "# Show the schema after casting and the corrected data\n",
+    "df_corrected.printSchema()\n",
+    "df_corrected.show()\n"
    ]
   },
   {
@@ -114,11 +97,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample data with missing values\n",
+    "data = {\n",
+    "    'Age': [25, 27, np.nan, 29, 30],\n",
+    "    'Salary': [50000, 54000, 58000, np.nan, 62000],\n",
+    "    'Department': ['HR', 'Finance', 'HR', np.nan, 'IT']\n",
+    "}\n",
+    "\n",
+    "# Step 1: Load the data into a pandas DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Show original data\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Step 2: Detect and fill missing values\n",
+    "# Impute numerical columns with mean for 'Age' and 'Salary'\n",
+    "df['Age'] = df['Age'].fillna(df['Age'].mean())\n",
+    "df['Salary'] = df['Salary'].fillna(df['Salary'].mean())\n",
+    "\n",
+    "# Impute categorical column 'Department' with the mode (most frequent value)\n",
+    "df['Department'] = df['Department'].fillna(df['Department'].mode()[0])\n",
+    "\n",
+    "# Step 3: Report the changes\n",
+    "print(\"\\nDataFrame after Imputation:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Report changes: Display which columns had missing values and how many were filled\n",
+    "missing_report = {\n",
+    "    'Age': df['Age'].isnull().sum(),\n",
+    "    'Salary': df['Salary'].isnull().sum(),\n",
+    "    'Department': df['Department'].isnull().sum()\n",
+    "}\n",
+    "\n",
+    "print(\"\\nMissing Values Report:\")\n",
+    "print(missing_report)\n"
    ]
   }
  ],
