--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_2.ipynb
@@ -18,28 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Task 2: Detect and Correct Incomplete Data in ETL\n",
-    "**Description**: Use Python and Pandas to detect incomplete data in an ETL process and fill\n",
-    "missing values with estimates.\n",
-    "\n",
-    "**Steps**:\n",
-    "1. Detect incomplete data\n",
-    "2. Fill missing values\n",
-    "3. Report changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +53,7 @@
        "      <th>customer_id</th>\n",
        "      <th>amount</th>\n",
        "      <th>transaction_date</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -82,42 +62,47 @@
        "      <td>1.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>2024-01-01</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2024-01-02</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>200.0</td>\n",
        "      <td>2024-01-03</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4.0</td>\n",
        "      <td>300.0</td>\n",
        "      <td>None</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2024-01-05</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  amount transaction_date\n",
-       "0          1.0   100.0       2024-01-01\n",
-       "1          2.0     NaN       2024-01-02\n",
-       "2          NaN   200.0       2024-01-03\n",
-       "3          4.0   300.0             None\n",
-       "4          5.0     NaN       2024-01-05"
+       "   customer_id  amount transaction_date source\n",
+       "0          1.0   100.0       2024-01-01    API\n",
+       "1          2.0     NaN       2024-01-02    API\n",
+       "2          NaN   200.0       2024-01-03    API\n",
+       "3          4.0   300.0             None    API\n",
+       "4          5.0     NaN       2024-01-05    API"
       ]
      },
      "metadata": {},
@@ -197,14 +182,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_777/2090788771.py:68: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_777/2204710607.py:77: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cleaned['amount'].fillna(df_cleaned['amount'].mean(), inplace=True)  # Impute amount\n",
-      "/tmp/ipykernel_777/2090788771.py:69: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/tmp/ipykernel_777/2204710607.py:78: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_cleaned['transaction_date'].fillna(method='ffill', inplace=True)  # Fill forward dates\n",
-      "/tmp/ipykernel_777/2090788771.py:69: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_777/2204710607.py:78: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -235,6 +220,7 @@
        "      <th>customer_id</th>\n",
        "      <th>amount</th>\n",
        "      <th>transaction_date</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -243,35 +229,39 @@
        "      <td>1.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>2024-01-01</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
        "      <td>200.0</td>\n",
        "      <td>2024-01-02</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4.0</td>\n",
        "      <td>300.0</td>\n",
        "      <td>2024-01-02</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5.0</td>\n",
        "      <td>200.0</td>\n",
        "      <td>2024-01-05</td>\n",
+       "      <td>API</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  amount transaction_date\n",
-       "0          1.0   100.0       2024-01-01\n",
-       "1          2.0   200.0       2024-01-02\n",
-       "3          4.0   300.0       2024-01-02\n",
-       "4          5.0   200.0       2024-01-05"
+       "   customer_id  amount transaction_date source\n",
+       "0          1.0   100.0       2024-01-01    API\n",
+       "1          2.0   200.0       2024-01-02    API\n",
+       "3          4.0   300.0       2024-01-02    API\n",
+       "4          5.0   200.0       2024-01-05    API"
       ]
      },
      "metadata": {},
@@ -320,7 +310,12 @@
     "    print(\"PySpark not available. Spark functionality skipped.\")\n",
     "    spark_available = False\n",
     "\n",
-    "# Step 2: Define function to load CSV safely\n",
+    "# Step 2: Define a custom exception for validation errors\n",
+    "class DataValidationError(Exception):\n",
+    "    \"\"\"Custom exception for data validation errors.\"\"\"\n",
+    "    pass\n",
+    "\n",
+    "# Step 3: Define function to load CSV safely\n",
     "def load_csv_safe(path):\n",
     "    if not os.path.exists(path):\n",
     "        raise FileNotFoundError(f\"File not found: {path}\")\n",
@@ -330,32 +325,36 @@
     "    except Exception as e:\n",
     "        raise ValueError(f\"Error loading CSV: {str(e)}\")\n",
     "\n",
-    "# Step 3: Simulate ingestion with missing values\n",
+    "# Step 4: Simulate ingestion with missing values\n",
     "data = {\n",
     "    'customer_id': [1, 2, np.nan, 4, 5],\n",
     "    'amount': [100.0, None, 200.0, 300.0, None],\n",
     "    'transaction_date': ['2024-01-01', '2024-01-02', '2024-01-03', None, '2024-01-05']\n",
     "}\n",
     "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Add a new column for the data source\n",
+    "df['source'] = 'API'\n",
+    "\n",
     "print(\"Raw Ingested Data:\")\n",
     "display(df)\n",
     "\n",
-    "# Step 4: Schema validation\n",
-    "required_cols = ['customer_id', 'amount', 'transaction_date']\n",
-    "def validate_schema(df, required_cols):\n",
+    "# Step 5: Schema validation\n",
+    "required_cols = ['customer_id', 'amount', 'transaction_date', 'source']\n",
+    "def check_schema(df, required_cols):\n",
     "    for col in required_cols:\n",
     "        if col not in df.columns:\n",
-    "            raise ValueError(f\"Missing expected column: {col}\")\n",
+    "            raise DataValidationError(f\"Missing expected column: {col}\")\n",
     "    if not np.issubdtype(df['customer_id'].dropna().dtype, np.number):\n",
     "        raise TypeError(\"customer_id must be numeric\")\n",
     "\n",
     "try:\n",
-    "    validate_schema(df, required_cols)\n",
+    "    check_schema(df, required_cols)\n",
     "    print(\"Schema validation successful.\")\n",
     "except Exception as e:\n",
     "    print(f\"Schema validation failed: {e}\")\n",
     "\n",
-    "# Step 5: Report missing values\n",
+    "# Step 6: Report missing values\n",
     "def missing_report(df):\n",
     "    report = df.isnull().sum().to_frame('Missing Count')\n",
     "    report['Missing %'] = (report['Missing Count'] / len(df)) * 100\n",
@@ -364,18 +363,18 @@
     "print(\"Missing Value Report:\")\n",
     "display(missing_report(df))\n",
     "\n",
-    "# Step 6: Handle missing values\n",
-    "def handle_missing_values(df):\n",
+    "# Step 7: Handle missing values\n",
+    "def clean_missing_data(df):\n",
     "    df_cleaned = df.dropna(subset=['customer_id'])  # Drop rows with missing IDs\n",
     "    df_cleaned['amount'].fillna(df_cleaned['amount'].mean(), inplace=True)  # Impute amount\n",
     "    df_cleaned['transaction_date'].fillna(method='ffill', inplace=True)  # Fill forward dates\n",
     "    return df_cleaned\n",
     "\n",
-    "df_clean = handle_missing_values(df)\n",
+    "df_clean = clean_missing_data(df)\n",
     "print(\"Cleaned Data:\")\n",
     "display(df_clean)\n",
     "\n",
-    "# Step 7: Simulate schema mismatch in PySpark (optional)\n",
+    "# Step 8: Simulate schema mismatch in PySpark (optional)\n",
     "if spark_available:\n",
     "    print(\"Simulating Spark schema mismatch:\")\n",
     "    try:\n",
@@ -391,7 +390,7 @@
     "    except Exception as e:\n",
     "        print(f\"Spark schema mismatch error handled: {e}\")\n",
     "\n",
-    "# Step 8: Unit tests\n",
+    "# Step 9: Unit tests\n",
     "class TestMissingValueHandling(unittest.TestCase):\n",
     "\n",
     "    def test_amount_imputation(self):\n",
@@ -408,10 +407,31 @@
     "print(\"Running Unit Tests...\")\n",
     "unittest.main(argv=[''], exit=False)\n",
     "\n",
-    "# Step 9: Save cleaned data\n",
+    "# Step 10: Save cleaned data\n",
     "df_clean.to_csv(\"cleaned_output.csv\", index=False)\n",
     "print(\"Cleaned data saved to cleaned_output.csv\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 2: Detect and Correct Incomplete Data in ETL\n",
+    "**Description**: Use Python and Pandas to detect incomplete data in an ETL process and fill\n",
+    "missing values with estimates.\n",
+    "\n",
+    "**Steps**:\n",
+    "1. Detect incomplete data\n",
+    "2. Fill missing values\n",
+    "3. Report changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
