--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -16,23 +16,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>2023-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>2023-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>2023-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>2023-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>2023-01-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2023-01-08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id  amount        date\n",
+       "0            1   200.0  2023-01-01\n",
+       "1            2   150.0  2023-01-02\n",
+       "2            3     NaN  2023-01-03\n",
+       "3            4   300.0  2023-01-04\n",
+       "4            5   250.0  2023-01-05\n",
+       "5            2   150.0  2023-01-06\n",
+       "6            6   500.0  2023-01-07\n",
+       "7            3   100.0  2023-01-08"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata:\n",
+      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:04:14.452498', 'transformations': []}\n",
+      "Data Quality Issues:\n",
+      "Column 'amount' has 1 missing values.\n",
+      "Cleaned data saved to 'cleaned_data.csv'\n",
+      "Final Cleaned Data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>2023-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>2023-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>235.714286</td>\n",
+       "      <td>2023-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>2023-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>2023-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>2023-01-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id      amount        date\n",
+       "0            1  200.000000  2023-01-01\n",
+       "1            2  150.000000  2023-01-02\n",
+       "2            3  235.714286  2023-01-03\n",
+       "3            4  300.000000  2023-01-04\n",
+       "4            5  250.000000  2023-01-05\n",
+       "6            6  500.000000  2023-01-07"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# write your code from here"
+    "# Ques_3.ipynb\n",
+    "# Task: Metadata Management for Data Quality\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Step 1: Create the dataset directly within the code\n",
+    "data = {\n",
+    "    'customer_id': [1, 2, 3, 4, 5, 2, 6, 3],\n",
+    "    'amount': [200, 150, np.nan, 300, 250, 150, 500, 100],\n",
+    "    'date': ['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04', '2023-01-05', '2023-01-06', '2023-01-07', '2023-01-08']\n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 2: Metadata structure\n",
+    "metadata = {\n",
+    "    'file': 'generated_in_notebook',  # As we're not reading from a file\n",
+    "    'row_count': len(df),\n",
+    "    'columns': list(df.columns),\n",
+    "    'column_types': {col: str(df[col].dtype) for col in df.columns},\n",
+    "    'last_updated': str(datetime.now()),\n",
+    "    'transformations': []\n",
+    "}\n",
+    "\n",
+    "# Step 3: Display the metadata and data for inspection\n",
+    "print(\"Loaded Data:\")\n",
+    "display(df)\n",
+    "print(\"Metadata:\")\n",
+    "print(metadata)\n",
+    "\n",
+    "# Step 4: Function to validate data quality based on metadata\n",
+    "def validate_data_quality(df, metadata):\n",
+    "    \"\"\"\n",
+    "    Check for missing values, invalid data types, and other quality checks.\n",
+    "    \"\"\"\n",
+    "    issues = []\n",
+    "    \n",
+    "    # Check for missing values\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    for col in missing_values.index:\n",
+    "        if missing_values[col] > 0:\n",
+    "            issues.append(f\"Column '{col}' has {missing_values[col]} missing values.\")\n",
+    "    \n",
+    "    # Check for data type validity\n",
+    "    for col in df.columns:\n",
+    "        expected_type = metadata['column_types'].get(col)\n",
+    "        if expected_type and not np.issubdtype(df[col].dtype, np.generic):\n",
+    "            issues.append(f\"Column '{col}' has an unexpected data type. Expected {expected_type}, got {str(df[col].dtype)}\")\n",
+    "    \n",
+    "    # Print issues if any, else indicate no issues\n",
+    "    if issues:\n",
+    "        print(\"Data Quality Issues:\")\n",
+    "        for issue in issues:\n",
+    "            print(issue)\n",
+    "    else:\n",
+    "        print(\"Data passed all quality checks!\")\n",
+    "    \n",
+    "    return issues\n",
+    "\n",
+    "# Validate the data quality\n",
+    "data_quality_issues = validate_data_quality(df, metadata)\n",
+    "\n",
+    "# Step 5: Log transformations made to the dataset\n",
+    "def log_transformation(metadata, transformation_details):\n",
+    "    \"\"\"\n",
+    "    Add details of data transformations to the metadata.\n",
+    "    \"\"\"\n",
+    "    metadata['transformations'].append({\n",
+    "        'transformation': transformation_details,\n",
+    "        'timestamp': str(datetime.now())\n",
+    "    })\n",
+    "\n",
+    "# Example transformations\n",
+    "log_transformation(metadata, \"Imputed missing values in 'amount' column with mean.\")\n",
+    "log_transformation(metadata, \"Removed duplicates based on 'customer_id' column.\")\n",
+    "\n",
+    "# Step 6: Apply data cleaning or transformations and log those\n",
+    "df['amount'].fillna(df['amount'].mean(), inplace=True)  # Example transformation\n",
+    "log_transformation(metadata, \"Imputed missing 'amount' values using mean.\")\n",
+    "\n",
+    "# Remove duplicates based on customer_id\n",
+    "df.drop_duplicates(subset='customer_id', keep='first', inplace=True)\n",
+    "log_transformation(metadata, \"Removed duplicate rows based on 'customer_id'.\")\n",
+    "\n",
+    "# Step 7: Save metadata to a JSON file for future tracking\n",
+    "def save_metadata(metadata, metadata_path='metadata.json'):\n",
+    "    \"\"\"\n",
+    "    Save metadata to a JSON file for tracking.\n",
+    "    \"\"\"\n",
+    "    with open(metadata_path, 'w') as f:\n",
+    "        json.dump(metadata, f, indent=4)\n",
+    "\n",
+    "# Save the updated metadata\n",
+    "save_metadata(metadata)\n",
+    "\n",
+    "# Step 8: Save cleaned data to a new file (simulating saving to CSV)\n",
+    "df.to_csv(\"cleaned_data.csv\", index=False)\n",
+    "print(\"Cleaned data saved to 'cleaned_data.csv'\")\n",
+    "\n",
+    "# Final metadata and data output\n",
+    "print(\"Final Cleaned Data:\")\n",
+    "display(df)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
