--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,11 +124,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Metadata:\n",
-      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:04:14.452498', 'transformations': []}\n",
+      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:06:22.785632', 'transformations': []}\n",
+      "\n",
       "Data Quality Issues:\n",
       "Column 'amount' has 1 missing values.\n",
+      "\n",
       "Cleaned data saved to 'cleaned_data.csv'\n",
+      "\n",
       "Final Cleaned Data:\n"
      ]
     },
@@ -242,13 +246,13 @@
     "    'transformations': []\n",
     "}\n",
     "\n",
-    "# Step 3: Display the metadata and data for inspection\n",
+    "# Display the dataset and metadata\n",
     "print(\"Loaded Data:\")\n",
     "display(df)\n",
-    "print(\"Metadata:\")\n",
+    "print(\"\\nMetadata:\")\n",
     "print(metadata)\n",
     "\n",
-    "# Step 4: Function to validate data quality based on metadata\n",
+    "# Step 3: Function to validate data quality based on metadata\n",
     "def validate_data_quality(df, metadata):\n",
     "    \"\"\"\n",
     "    Check for missing values, invalid data types, and other quality checks.\n",
@@ -269,18 +273,18 @@
     "    \n",
     "    # Print issues if any, else indicate no issues\n",
     "    if issues:\n",
-    "        print(\"Data Quality Issues:\")\n",
+    "        print(\"\\nData Quality Issues:\")\n",
     "        for issue in issues:\n",
     "            print(issue)\n",
     "    else:\n",
-    "        print(\"Data passed all quality checks!\")\n",
+    "        print(\"\\nData passed all quality checks!\")\n",
     "    \n",
     "    return issues\n",
     "\n",
     "# Validate the data quality\n",
     "data_quality_issues = validate_data_quality(df, metadata)\n",
     "\n",
-    "# Step 5: Log transformations made to the dataset\n",
+    "# Step 4: Log transformations made to the dataset\n",
     "def log_transformation(metadata, transformation_details):\n",
     "    \"\"\"\n",
     "    Add details of data transformations to the metadata.\n",
@@ -294,7 +298,7 @@
     "log_transformation(metadata, \"Imputed missing values in 'amount' column with mean.\")\n",
     "log_transformation(metadata, \"Removed duplicates based on 'customer_id' column.\")\n",
     "\n",
-    "# Step 6: Apply data cleaning or transformations and log those\n",
+    "# Step 5: Apply data cleaning or transformations and log those\n",
     "df['amount'].fillna(df['amount'].mean(), inplace=True)  # Example transformation\n",
     "log_transformation(metadata, \"Imputed missing 'amount' values using mean.\")\n",
     "\n",
@@ -302,7 +306,7 @@
     "df.drop_duplicates(subset='customer_id', keep='first', inplace=True)\n",
     "log_transformation(metadata, \"Removed duplicate rows based on 'customer_id'.\")\n",
     "\n",
-    "# Step 7: Save metadata to a JSON file for future tracking\n",
+    "# Step 6: Save metadata to a JSON file for future tracking\n",
     "def save_metadata(metadata, metadata_path='metadata.json'):\n",
     "    \"\"\"\n",
     "    Save metadata to a JSON file for tracking.\n",
@@ -313,12 +317,12 @@
     "# Save the updated metadata\n",
     "save_metadata(metadata)\n",
     "\n",
-    "# Step 8: Save cleaned data to a new file (simulating saving to CSV)\n",
+    "# Step 7: Save cleaned data to a new file (simulating saving to CSV)\n",
     "df.to_csv(\"cleaned_data.csv\", index=False)\n",
-    "print(\"Cleaned data saved to 'cleaned_data.csv'\")\n",
+    "print(\"\\nCleaned data saved to 'cleaned_data.csv'\")\n",
     "\n",
     "# Final metadata and data output\n",
-    "print(\"Final Cleaned Data:\")\n",
+    "print(\"\\nFinal Cleaned Data:\")\n",
     "display(df)\n"
    ]
   }
